--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Paul Hanneforth",
   "license": "ISC",
   "dependencies": {
-    "fileger": "^1.0.0"
+    "fileger": "^1.0.0",
+    "os": "^0.1.2"
   }
 }
